--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     },
     "dependencies": {
         "@koa/router": "^12.0.1",
+        "jsonwebtoken": "^9.0.2",
         "koa": "^2.14.2",
         "koa-static": "^5.0.0",
         "log4js": "^6.9.1",
