--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
         "dev": "nodemon src/dev.mjs"
     },
     "dependencies": {
+        "@koa/cors": "^5.0.0",
         "@koa/router": "^12.0.1",
         "jsonwebtoken": "^9.0.2",
         "koa": "^2.14.2",
+        "koa-bodyparser": "^4.4.1",
         "koa-static": "^5.0.0",
         "log4js": "^6.9.1",
         "md5": "^2.3.0",
